// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application 1`] = `
"<div class=\\"container m-3\\">
    <!-- Nav tabs -->
    <ul class=\\"nav nav-tabs\\" role=\\"tablist\\">
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#home\\" role=\\"tab\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link active\\" data-toggle=\\"tab\\" href=\\"#profile\\" role=\\"tab\\">Profile</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#messages\\" role=\\"tab\\">Messages</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#settings\\" role=\\"tab\\">Settings</a>
        </li>
    </ul>

    <!-- Tab panes -->
    <div class=\\"tab-content m-3\\">
        <div class=\\"tab-pane\\" id=\\"home\\" role=\\"tabpanel\\">
            Home
        </div>
        <div class=\\"tab-pane active\\" id=\\"profile\\" role=\\"tabpanel\\">
            Profile
        </div>
        <div class=\\"tab-pane\\" id=\\"messages\\" role=\\"tabpanel\\">
            Messages
        </div>
        <div class=\\"tab-pane\\" id=\\"settings\\" role=\\"tabpanel\\">
            Settings
        </div>
    </div>


    <!-- Nav tabs -->
    <ul class=\\"nav nav-tabs\\" role=\\"tablist\\">
        <li class=\\"nav-item\\">
            <a class=\\"nav-link active\\" data-toggle=\\"tab\\" href=\\"#home2\\" role=\\"tab\\">Home 2</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#profile2\\" role=\\"tab\\">Profile 2</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#messages2\\" role=\\"tab\\">Messages 2</a>
        </li>
    </ul>

    <!-- Tab panes -->
    <div class=\\"tab-content m-3\\">
        <div class=\\"tab-pane active\\" id=\\"home2\\" role=\\"tabpanel\\">
            Home 2
        </div>
        <div class=\\"tab-pane\\" id=\\"profile2\\" role=\\"tabpanel\\">
            Profile 2
        </div>
        <div class=\\"tab-pane\\" id=\\"messages2\\" role=\\"tabpanel\\">
            Messages 2
        </div>
    </div>
</div>
<script src=\\"/vendors~main.js\\"></script>
<script src=\\"/main.js\\"></script>"
`;

exports[`application 2`] = `
"<div class=\\"container m-3\\">
    <!-- Nav tabs -->
    <ul class=\\"nav nav-tabs\\" role=\\"tablist\\">
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#home\\" role=\\"tab\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#profile\\" role=\\"tab\\">Profile</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#messages\\" role=\\"tab\\">Messages</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link active\\" data-toggle=\\"tab\\" href=\\"#settings\\" role=\\"tab\\">Settings</a>
        </li>
    </ul>

    <!-- Tab panes -->
    <div class=\\"tab-content m-3\\">
        <div class=\\"tab-pane\\" id=\\"home\\" role=\\"tabpanel\\">
            Home
        </div>
        <div class=\\"tab-pane\\" id=\\"profile\\" role=\\"tabpanel\\">
            Profile
        </div>
        <div class=\\"tab-pane\\" id=\\"messages\\" role=\\"tabpanel\\">
            Messages
        </div>
        <div class=\\"tab-pane active\\" id=\\"settings\\" role=\\"tabpanel\\">
            Settings
        </div>
    </div>


    <!-- Nav tabs -->
    <ul class=\\"nav nav-tabs\\" role=\\"tablist\\">
        <li class=\\"nav-item\\">
            <a class=\\"nav-link active\\" data-toggle=\\"tab\\" href=\\"#home2\\" role=\\"tab\\">Home 2</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#profile2\\" role=\\"tab\\">Profile 2</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#messages2\\" role=\\"tab\\">Messages 2</a>
        </li>
    </ul>

    <!-- Tab panes -->
    <div class=\\"tab-content m-3\\">
        <div class=\\"tab-pane active\\" id=\\"home2\\" role=\\"tabpanel\\">
            Home 2
        </div>
        <div class=\\"tab-pane\\" id=\\"profile2\\" role=\\"tabpanel\\">
            Profile 2
        </div>
        <div class=\\"tab-pane\\" id=\\"messages2\\" role=\\"tabpanel\\">
            Messages 2
        </div>
    </div>
</div>
<script src=\\"/vendors~main.js\\"></script>
<script src=\\"/main.js\\"></script>"
`;

exports[`application 3`] = `
"<div class=\\"container m-3\\">
    <!-- Nav tabs -->
    <ul class=\\"nav nav-tabs\\" role=\\"tablist\\">
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#home\\" role=\\"tab\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link active\\" data-toggle=\\"tab\\" href=\\"#profile\\" role=\\"tab\\">Profile</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#messages\\" role=\\"tab\\">Messages</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#settings\\" role=\\"tab\\">Settings</a>
        </li>
    </ul>

    <!-- Tab panes -->
    <div class=\\"tab-content m-3\\">
        <div class=\\"tab-pane\\" id=\\"home\\" role=\\"tabpanel\\">
            Home
        </div>
        <div class=\\"tab-pane active\\" id=\\"profile\\" role=\\"tabpanel\\">
            Profile
        </div>
        <div class=\\"tab-pane\\" id=\\"messages\\" role=\\"tabpanel\\">
            Messages
        </div>
        <div class=\\"tab-pane\\" id=\\"settings\\" role=\\"tabpanel\\">
            Settings
        </div>
    </div>


    <!-- Nav tabs -->
    <ul class=\\"nav nav-tabs\\" role=\\"tablist\\">
        <li class=\\"nav-item\\">
            <a class=\\"nav-link active\\" data-toggle=\\"tab\\" href=\\"#home2\\" role=\\"tab\\">Home 2</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#profile2\\" role=\\"tab\\">Profile 2</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#messages2\\" role=\\"tab\\">Messages 2</a>
        </li>
    </ul>

    <!-- Tab panes -->
    <div class=\\"tab-content m-3\\">
        <div class=\\"tab-pane active\\" id=\\"home2\\" role=\\"tabpanel\\">
            Home 2
        </div>
        <div class=\\"tab-pane\\" id=\\"profile2\\" role=\\"tabpanel\\">
            Profile 2
        </div>
        <div class=\\"tab-pane\\" id=\\"messages2\\" role=\\"tabpanel\\">
            Messages 2
        </div>
    </div>
</div>
<script src=\\"/vendors~main.js\\"></script>
<script src=\\"/main.js\\"></script>"
`;

exports[`application 4`] = `
"<div class=\\"container m-3\\">
    <!-- Nav tabs -->
    <ul class=\\"nav nav-tabs\\" role=\\"tablist\\">
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#home\\" role=\\"tab\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link active\\" data-toggle=\\"tab\\" href=\\"#profile\\" role=\\"tab\\">Profile</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#messages\\" role=\\"tab\\">Messages</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#settings\\" role=\\"tab\\">Settings</a>
        </li>
    </ul>

    <!-- Tab panes -->
    <div class=\\"tab-content m-3\\">
        <div class=\\"tab-pane\\" id=\\"home\\" role=\\"tabpanel\\">
            Home
        </div>
        <div class=\\"tab-pane active\\" id=\\"profile\\" role=\\"tabpanel\\">
            Profile
        </div>
        <div class=\\"tab-pane\\" id=\\"messages\\" role=\\"tabpanel\\">
            Messages
        </div>
        <div class=\\"tab-pane\\" id=\\"settings\\" role=\\"tabpanel\\">
            Settings
        </div>
    </div>


    <!-- Nav tabs -->
    <ul class=\\"nav nav-tabs\\" role=\\"tablist\\">
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#home2\\" role=\\"tab\\">Home 2</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link active\\" data-toggle=\\"tab\\" href=\\"#profile2\\" role=\\"tab\\">Profile 2</a>
        </li>
        <li class=\\"nav-item\\">
            <a class=\\"nav-link\\" data-toggle=\\"tab\\" href=\\"#messages2\\" role=\\"tab\\">Messages 2</a>
        </li>
    </ul>

    <!-- Tab panes -->
    <div class=\\"tab-content m-3\\">
        <div class=\\"tab-pane\\" id=\\"home2\\" role=\\"tabpanel\\">
            Home 2
        </div>
        <div class=\\"tab-pane active\\" id=\\"profile2\\" role=\\"tabpanel\\">
            Profile 2
        </div>
        <div class=\\"tab-pane\\" id=\\"messages2\\" role=\\"tabpanel\\">
            Messages 2
        </div>
    </div>
</div>
<script src=\\"/vendors~main.js\\"></script>
<script src=\\"/main.js\\"></script>"
`;
